fixed layout issue with Header and Footer

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,3 +1,16 @@
+.footerContainer {
+    grid-row: 3;
+    grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: minmax(30px, 1fr) minmax(300px, 1111px) minmax(
+            30px,
+            1fr
+        );
+}
+
+.body {
+    grid-column: 2 / 3;
+}
 .dark {
     background-color: black;
 }
