--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,3 +1,13 @@
+.layoutContainer {
+    display: grid;
+    grid-template-columns: minmax(30px, 1fr) minmax(300px, 1111px) minmax(
+            30px,
+            1fr
+        );
+    grid-template-rows: 100px 1fr 100px;
+}
 .mainContainer {
     min-height: 100vh;
+    grid-row: 2;
+    grid-column: 2;
 }
